; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/format/coff/extr_coff.c_r_bin_coff_init_scn_hdr.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/format/coff/extr_coff.c_r_bin_coff_init_scn_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r_bin_coff_obj = type { i64, i64, %struct.TYPE_2__, i64, i32 }
%struct.TYPE_2__ = type { i64, i32, i64 }

@COFF_FILE_TI_COFF = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [9 x i8] c"8c6I2S1I\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"8c6i2s1i\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.r_bin_coff_obj*)* @r_bin_coff_init_scn_hdr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @r_bin_coff_init_scn_hdr(%struct.r_bin_coff_obj* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.r_bin_coff_obj*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.r_bin_coff_obj* %0, %struct.r_bin_coff_obj** %3, align 8
  %7 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %8 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i64 4, i64 0
  %14 = add i64 4, %13
  store i64 %14, i64* %6, align 8
  %15 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %16 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %15, i32 0, i32 2
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @COFF_FILE_TI_COFF, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %1
  %22 = load i64, i64* %6, align 8
  %23 = add nsw i64 %22, 2
  store i64 %23, i64* %6, align 8
  br label %24

24:                                               ; preds = %21, %1
  %25 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %26 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %25, i32 0, i32 2
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = sext i32 %28 to i64
  %30 = mul i64 %29, 4
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %5, align 4
  %32 = load i64, i64* %6, align 8
  %33 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %34 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp sgt i64 %32, %35
  br i1 %36, label %49, label %37

37:                                               ; preds = %24
  %38 = load i64, i64* %6, align 8
  %39 = load i32, i32* %5, align 4
  %40 = sext i32 %39 to i64
  %41 = add nsw i64 %38, %40
  %42 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %43 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = icmp sgt i64 %41, %44
  br i1 %45, label %49, label %46

46:                                               ; preds = %37
  %47 = load i32, i32* %5, align 4
  %48 = icmp slt i32 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %46, %37, %24
  store i32 0, i32* %2, align 4
  br label %92

50:                                               ; preds = %46
  %51 = load i32, i32* %5, align 4
  %52 = sext i32 %51 to i64
  %53 = add i64 %52, 4
  %54 = trunc i64 %53 to i32
  %55 = call i64 @calloc(i32 1, i32 %54)
  %56 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %57 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %56, i32 0, i32 1
  store i64 %55, i64* %57, align 8
  %58 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %59 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %58, i32 0, i32 1
  %60 = load i64, i64* %59, align 8
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %63, label %62

62:                                               ; preds = %50
  store i32 0, i32* %2, align 4
  br label %92

63:                                               ; preds = %50
  %64 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %65 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %64, i32 0, i32 4
  %66 = load i32, i32* %65, align 8
  %67 = load i64, i64* %6, align 8
  %68 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %69 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %68, i32 0, i32 1
  %70 = load i64, i64* %69, align 8
  %71 = inttoptr i64 %70 to i32*
  %72 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %73 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %72, i32 0, i32 3
  %74 = load i64, i64* %73, align 8
  %75 = icmp ne i64 %74, 0
  %76 = zext i1 %75 to i64
  %77 = select i1 %75, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0)
  %78 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %79 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %78, i32 0, i32 2
  %80 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %79, i32 0, i32 1
  %81 = load i32, i32* %80, align 8
  %82 = call i32 @r_buf_fread_at(i32 %66, i64 %67, i32* %71, i8* %77, i32 %81)
  store i32 %82, i32* %4, align 4
  %83 = load i32, i32* %4, align 4
  %84 = load i32, i32* %5, align 4
  %85 = icmp ne i32 %83, %84
  br i1 %85, label %86, label %91

86:                                               ; preds = %63
  %87 = load %struct.r_bin_coff_obj*, %struct.r_bin_coff_obj** %3, align 8
  %88 = getelementptr inbounds %struct.r_bin_coff_obj, %struct.r_bin_coff_obj* %87, i32 0, i32 1
  %89 = load i64, i64* %88, align 8
  %90 = call i32 @R_FREE(i64 %89)
  store i32 0, i32* %2, align 4
  br label %92

91:                                               ; preds = %63
  store i32 1, i32* %2, align 4
  br label %92

92:                                               ; preds = %91, %86, %62, %49
  %93 = load i32, i32* %2, align 4
  ret i32 %93
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @r_buf_fread_at(i32, i64, i32*, i8*, i32) #1

declare dso_local i32 @R_FREE(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
